--- a/resize.html
+++ b/resize.html
@@ -25,12 +25,22 @@
         
           <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
           <img id="icon" src="Images/Convertpdf.png">
-          Convert PDF
+          Image to PDF
+          </button>
+
+          <button type="button" onclick="location.href='pdftoimg.html'" id="blocks">
+          <img id="icon" src="">
+          PDF to Image
           </button>
 
           <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
           <img id="icon" src="Images/Extract.png">
           Extract PDF
+          </button>
+
+          <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
+          <img id="icon" src="">
+          Add Image
           </button>
 
           <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
@@ -102,7 +112,7 @@
             </div>
             <h2>Import your image to resize</h2>
                 <div class="drop_area">
-                    <h4>Drop your image here</h4>
+                    <h4>Drag & Drop your image here</h4>
                 </div>
             <label class="button-87" for="input-file">Import Image</label>
             <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
