--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Convert PDF</title>
+    <title>Image to PDF</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
@@ -28,12 +28,22 @@
   
           <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
           <img id="icon" src="Images/Convertpdf.png">
-          Convert PDF
+          Image to PDF
+          </button>
+
+          <button type="button" onclick="location.href='pdftoimg.html'" id="blocks">
+          <img id="icon" src="">
+          PDF to Image
           </button>
 
           <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
           <img id="icon" src="Images/Separate.png">
           Extract PDF
+          </button>
+
+          <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
+          <img id="icon" src="">
+          Add Image
           </button>
 
           <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
