--- a/text.html
+++ b/text.html
@@ -27,12 +27,22 @@
         
                 <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
                 <img id="icon" src="Images/Convertpdf.png">
-                Convert PDF
+                Image to PDF
+                </button>
+
+                <button type="button" onclick="location.href='pdftoimg.html'" id="blocks">
+                <img id="icon" src="">
+                PDF to Image
                 </button>
 
                 <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
                 <img id="icon" src="Images/Extract.png">
                 Extract PDF
+                </button>
+
+                <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
+                <img id="icon" src="">
+                Add Image
                 </button>
 
                 <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
