--- a/pdftoimg.html
+++ b/pdftoimg.html
@@ -110,7 +110,7 @@
                 
                 <label class="button-87" onclick="convertPDF()">Convert to images</label><br>
 
-                <a id="downloadLink" href="#" style="display:none">Download Images</a>
+                  <div id="zipbutton" class="hide"><label class="button-87" id="download-all" class="download-button">Download All Images as ZIP</label></div>
 
                 <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
 
@@ -129,3 +129,4 @@
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
