--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -104,15 +104,22 @@
                 <h2>Import PDF to flatten</h2>
 
                 <label for="input-file" class="button-87">Import PDF</label>
-                <input type="file" id="input-file" onclick="removehide()" accept=".pdf"><br>
+                <input type="file" id="input-file" accept=".pdf"><br>
                   
                 <div id="hide" class="hide">
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+
                 <label class="button-87" onclick="flattenPDF()">Flatten PDF</label><br>
+                
+                  <div id="downloadflattenbutton" class="hide"><label class="button-87" id="download-pdf" class="download-button">Download Flattened PDF</label></div>
+
+                <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
+
+                <canvas id="pdf-canvas" style="display:none;"></canvas>
+
+                <div id="images"></div>
+
                 </div>
-
-                <a id="downloadLink" href="#" style="display:none">Download flattened PDF</a>
-
             </div>
           </div>
   </body>
@@ -120,3 +127,5 @@
 <script src="index.js"></script>
 <script src="flatteningpdf.js"></script>
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
