--- a/imagetuning.html
+++ b/imagetuning.html
@@ -29,7 +29,7 @@
         </button>
 
         <button type="button" onclick="location.href='pdftoimg.html'" id="blocks">
-        <img id="icon" src="">
+        <img id="icon" src="Images\pdftoimg.png">
         PDF to Image
         </button>
 
@@ -40,7 +40,7 @@
 
         <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
         <img id="icon" src="">
-        Add Image
+        Embed Image
         </button>
 
         <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
