--- a/text.html
+++ b/text.html
@@ -31,7 +31,7 @@
                 </button>
 
                 <button type="button" onclick="location.href='pdftoimg.html'" id="blocks">
-                <img id="icon" src="">
+                <img id="icon" src="Images\pdftoimg.png">
                 PDF to Image
                 </button>
 
@@ -42,7 +42,7 @@
 
                 <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
                 <img id="icon" src="">
-                Add Image
+                Embed Image
                 </button>
 
                 <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
