--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -113,6 +113,10 @@
             <div class="poster">
                 <h2>Import PDF to flatten</h2>
 
+                <div class="drop_area">
+                  <h4>Drag & Drop your PDF here</h4>
+                </div>
+
                 <label for="input-file" class="button-87">Import PDF</label>
                 <input type="file" id="input-file" accept=".pdf"><br>
                   
