--- a/imagetuning.html
+++ b/imagetuning.html
@@ -113,6 +113,7 @@
                 <label class="button-87" for="input-file">Select file</label>
                 <div  style="margin-top: 20px;">
                 <img id="output" style="max-width: 400px; max-height: 400px;" />
+                </div>
             </div>
                 
         <div class="hide">
