--- a/pdftoimg.html
+++ b/pdftoimg.html
@@ -113,6 +113,10 @@
             <div class="poster">
                 <h2>Convert your PDF into images</h2>
 
+                <div class="drop_area">
+                  <h4>Drag & Drop your PDF here</h4>
+                </div>
+
                 <label class="button-87" for="input-file">Import PDF</label>
                 <input type="file" id="input-file" accept=".pdf"><br>
 
