--- a/resize.html
+++ b/resize.html
@@ -111,9 +111,9 @@
                         <img id="image">
                     </div>
                     <h2>Import your image to resize</h2>
-                        <div class="drop_area">
-                            <h4>Drag & Drop your image here</h4>
-                        </div>
+                    <div class="drop_area">
+                        <h4>Drag & Drop your image here</h4>
+                    </div>
                     <label class="button-87" for="input-file">Import Image</label>
                     <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
                     <canvas id="canvas" width="0" height="0"></canvas>
@@ -121,11 +121,11 @@
                     <div class="tools hide">
                         <ul class="options">
                             <li class="img_width">
-                                <span id="width_span">Width</span>
+                                <div class="title">Width</div>
                                 <textarea id="width_input" placeholder="Enter width" row="5" cols="10"></textarea>
                             </li>
                             <li class="img_height">
-                                <span id="height_span">Height</span>
+                                <div class="title">Height</div>
                                 <textarea id="height_input" placeholder="Enter height" row="5" cols="10"></textarea>
                             </li>
                             <li>
