--- a/crop.html
+++ b/crop.html
@@ -110,9 +110,9 @@
             <div id="paper">
                 <div class="poster">                    
                     <center><h2>Import your image to crop</h2></center> 
-                        <div class="drop_area">                    
-                            <h4>Drag & Drop your image here</h4>
-                        </div>               
+                    <div class="drop_area">                    
+                        <h4>Drag & Drop your image here</h4>
+                    </div>               
                     <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
                     <label class="button-87"for="input-file">Import Image</label>
                     <div class="volume">
@@ -125,17 +125,17 @@
                     </div>
 
                     <div class="zoom hide" align="left">
-                        <span>Zoom</span>
+                        <div id="zoom1">Zoom</div>
                         <li>Zoom In</li>
                         <li>Zoom Out</li>
                     </div>
                     <div class="rotate hide" align="left">
-                        <span>Rotate</span>
+                        <div id="rotate1">Rotate</div>
                         <li>clockwise</li>
                         <li>counter-clockwise</li>
                     </div>
                     <div class="aspect-ratio hide" align="left">
-                        <span>Aspect Ratio</span>
+                        <div id="aspect-ratio1">Aspect Ratio</div>
                         <li>16:9</li>
                         <li>5:4</li>
                         <li>2:3</li>
