--- a/imgembedpdf.html
+++ b/imgembedpdf.html
@@ -113,11 +113,19 @@
             <div class="poster">
                 <h2>Import your PDF and image</h2>
 
+                <div class="drop_area">
+                  <h4>Drag & Drop your PDF here</h4>
+                </div>
+  
+                <div class="drop_area2">
+                  <h4>Drag & Drop your image here</h4>
+                </div>
+
                 <label class="button-87" for="input-file">Import PDF</label>
                 <input type="file" id="input-file" accept=".pdf"><br>
 
                 <label class="button-87" for="input-file2">Import Image</label>
-                <input type="file" id="input-file2" accept="image/*"><br>
+                <input type="file" id="input-file2" accept="image/*"><br>                
 
                 <div id="hide" class="hide">
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
@@ -127,6 +135,8 @@
                 <a id="downloadLink" href="#" style="display:none">Download Changed PDF</a>
 
                 <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
+
+                <img id="output" style="max-width: 400px; max-height: 400px;" />
 
                 <canvas id="canvas" width="0" height="0"></canvas>
 
