--- a/imgembedpdf.html
+++ b/imgembedpdf.html
@@ -128,7 +128,7 @@
 
                 <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
 
-                <canvas id="canvas" width="0" height="0"></canvas>
+                <canvas id="pdf-canvas" style="display:none;"></canvas>
 
                 </div>
             </div>
@@ -138,3 +138,6 @@
 <script src="index.js"></script>
 <script src="imgembedpdf.js"></script>
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
