--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
 <html>
   
 <head>
-
 <title>MixTooLz</title>
 <link rel="stylesheet" type="text/css" href="index.css">
-
-
 </head>
 
-<body>
+<header>
   <img id="logo" src= "Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='index.html'">
 
   <div align="right">
     <button type="button" class="collapsible">
-      <img id="menubar" src="Images/Edit.png">&nbsp;Tools</button>
+      <img id="menubar" src="Images/Edit.png">&nbsp;<b><i>Tools</i></b></button>
     
-      <div class="content1">
+      <div class="content1" align="center">
 
         <!--Adding buttons to the navigation bar in home page-->
         <button type="button" onclick="location.href='index.html'" id="blocks">
@@ -103,21 +100,13 @@
   
       </div>
   </div>
+</header>
 
 <br></br>
 <br></br>
 
-<div align="middle">
-
- <p class="button-87">
-  Set of useful tools that processes PDF documents or edit images on your own browser.
-
-  <br>
-  <br>
-
-</div>
-
-<br></br>
+<body>
+<div align="middle"><p>Set of useful tools that processes PDF documents or edit images on your own browser.</div>
 
 <div class="squarebox">
    <button onclick="location.href='imgConvert.html'">
