--- a/crop.html
+++ b/crop.html
@@ -10,14 +10,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.css">
     </head>
-    <body>
+    <header>
         <img id="logo" src= "Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='index.html'">
 
         <div align="right">
             <button type="button" class="collapsible">
               <img id="menubar" src="Images/Edit.png">&nbsp;Tools</button>
             
-              <div class="content1">
+              <div class="content1" align="center">
         
                 <!--Adding buttons to the navigation bar in home page-->
                 <button type="button" onclick="location.href='index.html'" id="blocks">
@@ -99,14 +99,16 @@
                 <img id="icon" src="Images/resize.png">
                 Resize
                 </button>
-
         </div>
+    </div>
+</header>
 
         <br></br>
         <br></br>
         <br></br>
 
-        <div class="wall" align="center">
+    <body>
+  <div class="wall" align="center">
             <div id="paper">
                 <div class="poster">                    
                     <center><h2>Import your image to crop</h2></center> 
