--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
 
         <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
-        <img id="icon" src="">
+        <img id="icon" src="Images\Embed.png">
         Embed Image
         </button>
 
@@ -106,35 +106,36 @@
 <br></br>
 
 <body>
-<div align="middle"><p>Set of useful tools that processes PDF documents or edit images on your own browser.</div>
 
-<div class="squarebox">
-   <button onclick="location.href='imgConvert.html'">
-    <table class="toolTable">
-    <thead>
-    <th><img class="iconz" src="Images/img_converter.png" ></th>
-    <th>Convert PNG</th>  
-      <tr>
-      <td>Turn JPG and JPEG images to PNG</td>           
-      </tr>
-    </thead>
-    </table>
-  </button>
-</div>
+  <div align="middle" id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser.</i></div>
 
-<div class="squarebox">
-  <button onclick="location.href='crop.html'">
-    <table class="toolTable">
-    <thead>
-    <th><img class="iconz" src="Images/Crop.png" ></th>
-    <th>Crop Image</th>  
+  <div class="squarebox">
+    <button onclick="location.href='imgConvert.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="Images/img_converter.png" ></th>
+      <th>Convert PNG</th>  
         <tr>
-        <td>Crop JPG, JPEG or PNG images</td>
+        <td>Turn JPG and JPEG images to PNG</td>           
         </tr>
-    </thead>
-    </table>
-  </button>
-</div>
+      </thead>
+      </table>
+    </button>
+  </div>
+
+  <div class="squarebox">
+    <button onclick="location.href='crop.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="Images/Crop.png" ></th>
+      <th>Crop Image</th>  
+          <tr>
+          <td>Crop JPG, JPEG or PNG images</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 
   <div class="squarebox">
     <button onclick="location.href='separatepdf.html'">
@@ -252,4 +253,22 @@
 <script src="index.js"></script>
 
 </body>
+
+<br></br>
+<br></br>
+
+<footer class="footer-distributed">
+  
+  <div class="footer-left">
+    <img id="logo2" src= "Images\MixTooLz Logo.png" align="left" margin="0px">
+  </div>
+
+  <div class="footer-center">
+  </div>
+
+  <div class="footer-right">
+  </div>
+
+</footer>
+
 </html>
