--- a/resize.html
+++ b/resize.html
@@ -39,7 +39,7 @@
           </button>
 
           <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
-          <img id="icon" src="">
+          <img id="icon" src="Images\Embed.png">
           Embed Image
           </button>
 
