--- a/imgConvert.html
+++ b/imgConvert.html
@@ -42,7 +42,7 @@
         </button>
 
         <button type="button" onclick="location.href='imgembedpdf.html'" id="blocks">
-        <img id="icon" src="">
+        <img id="icon" src="Images\Embed.png">
         Embed Image
         </button>
 
