--- a/index.html
+++ b/index.html
@@ -264,9 +264,12 @@
   </div>
 
   <div class="footer-center">
+    <h3>Checkout our socials:</h3>
   </div>
 
   <div class="footer-right">
+    <h3>Some useful libraries we used:
+    </h3>
   </div>
 
 </footer>
