--- a/index.html
+++ b/index.html
@@ -260,6 +260,21 @@
   </div>
 </div>
 
+<div class="squarebox">
+  <button onclick="location.href='resize.html'">
+    <table class="toolTable">
+    <thead>
+    <th><img class="iconz" src="Images/resize.png" ></th>
+    <th>Resize</th>  
+        <tr>
+        <td>Resize an Image</td>
+        </tr>
+    </thead>
+    </table>
+  </button>
+</div>
+</div>
+
 <script src="index.js"></script>
 
 </body>
