--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -36,8 +36,8 @@
           PDF to Image
           </button>
 
-          <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
-          <img id="icon" src="Images/Separate.png">
+          <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
+          <img id="icon" src="Images/Extract.png">
           Extract PDF
           </button>
 
