add content footer

--- a/draw.html
+++ b/draw.html
@@ -17,7 +17,7 @@
 
         <div align="right">
             <button type="button" class="collapsible">
-              <img id="menubar" src="Images/Edit.png">&nbsp;Tools</button>
+              <img id="menubar" src="Images/Edit.png">&nbsp;<b><i>Tools</i></b></button>
             
         <div class="content1" align="center">
         
