--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <body>
 
-  <div align="middle" id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser.</i></div>
+  <div  id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser.</i></div>
 
   <div class="squarebox">
     <button onclick="location.href='imgConvert.html'">
@@ -261,6 +261,11 @@
   
   <div class="footer-left">
     <img id="logo2" src= "Images\MixTooLz Logo.png" align="left" margin="0px">
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <h3>by TT1L Group 5</h3>
   </div>
 
   <div class="footer-center">
@@ -268,10 +273,17 @@
   </div>
 
   <div class="footer-right">
-    <h3>Some useful libraries we used:
-    </h3>
-  </div>
+    <h3>Some useful libraries we used:</h3>
 
+    <h3><a href="https://pdf-lib.js.org/">PDF-LIB</a></h3>
+
+    <h3><a href="https://jquery.com/">jQuery</a></h3>
+
+    <h3><a href="https://parall.ax/products/jspdf">jsPDF</a></h3>
+
+    <a href=""><h3></h3></a>
+
+  </div>
 </footer>
 
 </html>
