--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <body>
 
-  <div  id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser.</i></div>
+  <div align="center"><div  id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser...</i></div></div>
 
   <div class="squarebox">
     <button onclick="location.href='imgConvert.html'">
@@ -343,7 +343,7 @@
     <br></br>
     <br></br>
     <br></br>
-    <h3>by TT1L Group 5</h3>
+    <h2>by <i style="color:yellow;">TT1L Group 5</i> for <b style="color:orange;">MINI IT PROJECT</b>~</h2>
   </div>
 
   <div class="footer-center">
@@ -353,12 +353,18 @@
   <div class="footer-right">
     <h3>Some useful libraries we used:</h3>
 
-    <h3><a href="https://pdf-lib.js.org/">PDF-LIB</a></h3>
+    <h3 ><a style="color:red;" href="https://pdf-lib.js.org/">PDF-LIB</a></h3>
+    
+    <h3 ><a style="color:rgb(75, 179, 66);" href="https://html2canvas.hertzen.com/">html2canvas</a></h3>
 
-    <h3><a href="https://jquery.com/">jQuery</a></h3>
+    <h3 ><a style="color:lightskyblue;" href="https://jquery.com/">jQuery</a></h3>
 
-    <h3><a href="https://parall.ax/products/jspdf">jsPDF</a></h3>
+    <h3 ><a style="color:purple;" href="https://parall.ax/products/jspdf">jsPDF</a></h3>
 
+
+
+    <a href=""><h3></h3></a>
+    
     <a href=""><h3></h3></a>
 
   </div>
