--- a/index.html
+++ b/index.html
@@ -321,42 +321,14 @@
       </div>
     </div>
 
-
-
-<script src="index.js"></script>
-
 </body>
 
 <br></br>
 <br></br>
 
-<footer class="footer-distributed">
-  
-  <div class="footer-left">
-    <img id="logo2" src= "Images\MixTooLz Logo.png" align="left" margin="0px">
-    <br></br>
-    <br></br>
-    <br></br>
-    <h2>by <i style="color:yellow;">TT1L Group 5</i> for <b style="color:orange;">MINI IT PROJECT</b>~</h2>
-  </div>
-
-  <div class="footer-center">
-    <h3>Checkout our socials:</h3>
-  </div>
-
-  <div class="footer-right">
-    <h3>Some useful libraries we used:</h3>
-
-    <h3 ><a style="color:red;" href="https://pdf-lib.js.org/">PDF-LIB</a></h3>
-    
-    <h3 ><a style="color:rgb(75, 179, 66);" href="https://html2canvas.hertzen.com/">html2canvas</a></h3>
-
-    <h3 ><a style="color:lightskyblue;" href="https://jquery.com/">jQuery</a></h3>
-
-    <h3 ><a style="color:purple;" href="https://parall.ax/products/jspdf">jsPDF</a></h3>
-
-
-  </div>
+<footer>
+  <div id='footer'></div>
 </footer>
 
 </html>
+<script src="index.js"></script>
