--- a/draw.html
+++ b/draw.html
@@ -125,10 +125,10 @@
               <div class="tools hide">
                 <ul class="options">
                   <li class="undo">
-                    <img src="Images/undo.png" id="icon">
+                    <img src="Images/Undo.png" id="icon">
                   </li>
                   <li class="redo">
-                    <img src="Images/redo.png" id="icon">
+                    <img src="Images/Redo.png" id="icon">
                   </li>
                 </ul>
                 <div class="title">Line Width</div>
@@ -173,7 +173,7 @@
                 </ul>
                 <div>
                 <li class="clean">
-                  <img src="Images/Clean.png" id="icon">
+                  <img src="Images/Delete.png" id="icon">
                   <div id="clear1">Clear</div>
                 </li>
                 </div>
