--- a/text.html
+++ b/text.html
@@ -124,10 +124,10 @@
                     <div class="tools hide">
                         <ul class="options">
                             <li class="undo">
-                                <img src="Images/undo.png" id="icon">
+                                <img src="Images/Undo.png" id="icon">
                             </li>
                             <li class="redo">
-                                <img src="Images/redo.png" id="icon">
+                                <img src="Images/Redo.png" id="icon">
                             </li>
                         </ul>
                         <ul class="options">
