--- a/crop.html
+++ b/crop.html
@@ -128,13 +128,21 @@
 
                     <div class="zoom hide" align="left">
                         <div id="zoom1">Zoom</div>
-                        <li>Zoom In</li>
-                        <li>Zoom Out</li>
+                        <li>
+                            <img src="Images/Zoom_in.png" id="icon">
+                        </li>
+                        <li>
+                            <img src="Images/Zoom_out.png" id="icon">
+                        </li>
                     </div>
                     <div class="rotate hide" align="left">
                         <div id="rotate1">Rotate</div>
-                        <li>clockwise</li>
-                        <li>counter-clockwise</li>
+                        <li>
+                            <img src="Images/Clockwise.png" id="icon">
+                        </li>
+                        <li>
+                            <img src="Images/Anti-clockwise.png" id="icon">
+                        </li>
                     </div>
                     <div class="aspect-ratio hide" align="left">
                         <div id="aspect-ratio1">Aspect Ratio</div>
