--- a/extractpdf.html
+++ b/extractpdf.html
@@ -61,6 +61,11 @@
           </div>
 </body>
 
+<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+<footer>
+  <special-footer></special-footer>
+</footer>
+
 <script src="index.js"></script>
 <script src="extractpdf.js"></script>
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
