--- a/imgConvert.html
+++ b/imgConvert.html
@@ -11,6 +11,9 @@
 
 </head>
 
+<br></br>
+<br></br>
+
 <header>
     <img id="logo" src= "Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='index.html'">
   
@@ -48,12 +51,18 @@
     <a id="downloadLink" style="display: none;">Download PNG</a>
     <br>
     <canvas id="canvas" style="display: none;"></canvas>
-    </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 
-    <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+
+<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
 <footer>
-      <special-footer></special-footer>
-    </footer>
+  <special-footer></special-footer>
+</footer>
 
     <script src="index.js"></script>
     <script src="imgConvert.js"></script>
