--- a/mergepdf.html
+++ b/mergepdf.html
@@ -28,6 +28,7 @@
 <br></br>
 <br></br>
 
+<body>
   <div class="wall" align="center">
     <form action="/">
         <div id="paper"></div>
@@ -62,15 +63,19 @@
               
           </div>
         </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+
 <footer>
   <special-footer></special-footer>
 </footer>
 
-</html>
-
 <script src="index.js"></script>
 <script src="mergepdf.js"></script>
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
+
+</html>
