--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -58,7 +58,12 @@
                 </div>
             </div>
           </div>
-  </body>
+</body>
+
+<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+<footer>
+  <special-footer></special-footer>
+</footer>
 
 <script src="index.js"></script>
 <script src="flatteningpdf.js"></script>
