--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -112,8 +112,11 @@
           <div id="paper"></div>
             <div class="poster">
               <h2>Convert an Image to PDF</h2>
+              <div class="drop_area">
+                <h4>Drag & Drop your image here</h4>
+              </div>
           <div>
-            <input type="file" id="container"  accept="image/*">
+            <input type="file" id="container" multiple="multiple" accept="image/*">
            
   
             <div>
