--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button onclick="location.href='separatepdf.html'">
           <img class="iconz" src="Images/Separate.png" >
             <h3>Separate PDF</h3>
-            <p class="showDes">separate one or several pages from one PDF file to make a separate PDF file</p>
+            <p class="showDes">Separate one or several pages from one PDF file to make two separate PDF files</p>
         </button>
       </div>  
 
@@ -66,7 +66,7 @@
         <button onclick="location.href='metadatapdf.html'">
           <img class="iconz" src="Images/Metadata.png" >
             <h3>Metadata PDF</h3>
-            <p class="showDes">Read hidden data of a PDF file</p>
+            <p class="showDes">Read or write to hidden data of a PDF file</p>
         </button>
       </div>
 
@@ -114,7 +114,7 @@
         <button onclick="location.href='imgembedpdf.html'">
           <img class="iconz" src="Images\Embed.png" >
             <h3>Image Embed with PDF</h3>
-            <p class="showDes">Image Embed with pdf</p>
+            <p class="showDes">Embed an image into a PDF file</p>
         </button>
       </div>
 
@@ -122,7 +122,7 @@
         <button onclick="location.href='pdftoimg.html'">
           <img class="iconz" src="Images\pdftoimg.png" >
             <h3>PDF to Image</h3>
-            <p class="showDes">Convert a PDF into an Image</p>
+            <p class="showDes">Convert a PDF into an Images</p>
         </button>
       </div>
 
