12/6 css tools layout

--- a/crop.html
+++ b/crop.html
@@ -48,34 +48,36 @@
                         </div>
                     </div>
 
-                    <div class="zoom hide" align="left">
-                        <div id="zoom1">Zoom</div>
-                        <li>
-                            <img src="Images/Zoom_in.png" id="icon">
-                        </li>
-                        <li>
-                            <img src="Images/Zoom_out.png" id="icon">
-                        </li>
-                    </div>
-                    <div class="rotate hide" align="left">
-                        <div id="rotate1">Rotate</div>
-                        <li>
-                            <img src="Images/Clockwise.png" id="icon">
-                        </li>
-                        <li>
-                            <img src="Images/Anti-clockwise.png" id="icon">
-                        </li>
-                    </div>
-                    <div class="aspect-ratio hide" align="left">
-                        <div id="aspect-ratio1">Aspect Ratio</div>
-                        <li>16:9</li>
-                        <li>5:4</li>
-                        <li>2:3</li>
-                        <li>1:1</li>
-                        <li>Custom</li>
-                        <br></br>
-                        <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
-                    </div>
+                    <div class="tools">
+                        <div class="zoom hide" align="left">
+                            <div id="zoom1">Zoom</div>
+                            <li>
+                                <img src="Images/Zoom_in.png" id="icon">
+                            </li>
+                            <li>
+                                <img src="Images/Zoom_out.png" id="icon">
+                            </li>
+                        </div>
+                        <div class="rotate hide" align="left">
+                            <div id="rotate1">Rotate</div>
+                            <li>
+                                <img src="Images/Clockwise.png" id="icon">
+                            </li>
+                            <li>
+                                <img src="Images/Anti-clockwise.png" id="icon">
+                            </li>
+                        </div>
+                        <div class="aspect-ratio hide" align="left">
+                            <div id="aspect-ratio1">Aspect Ratio</div>
+                            <li>16:9</li>
+                            <li>5:4</li>
+                            <li>2:3</li>
+                            <li>1:1</li>
+                            <li>Custom</li>
+                            <br></br>                            
+                        </div>                                              
+                    </div>                    
+                    <textarea class="rename hide" id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                     
                     <div class="btn">
                         <button id="preview" class="hide">Preview</button>
