--- a/draw.html
+++ b/draw.html
@@ -43,54 +43,54 @@
               <canvas id="canvas" width="0" height="0"></canvas>
             
               <div class="tools hide">
-                <ul class="options">
-                  <li class="undo">
-                    <img src="Images/Undo.png" id="icon">
-                  </li>
-                  <li class="redo">
-                    <img src="Images/Redo.png" id="icon">
-                  </li>
-                </ul>
-                <div class="title">Line Width</div>
-                <ul class="options">
-                  <li class="slide">
-                    <input type="range" id="size" min="1" max="30" value="5">
-                  </li>
-                </ul>
-                <div class="title">Shapes</div>
-                <ul class="options">
-                  <li class="shape" id="free">
-                    <div>
-                      <img src="Images/Draw.png" id="icon">
-                    </div>
-                  </li>
-                  <li class="shape" id="line">
-                    <div>
-                      <img src="Images/line.png" id="icon">
-                    </div>
-                  </li>
-                  <li class="shape" id="rectangle">
-                    <div>
-                      <img src="Images/rectangle.png" id="icon">
-                    </div>
-                  </li>
-                  <li class="shape" id="circle">
-                    <div>
-                      <img src="Images/circle.png" id="icon">
-                    </div>
-                  </li>
-                </ul>
-                <div class="title">Colors</div>
-                <ul class="options">
-                  <li class="option"></li>
-                  <li class="option"></li>
-                  <li class="option"></li>
-                  <li class="option"></li>
-                  <li class="option"></li>
-                  <li class="option">
-                    <input type="color" id="color-picker" value="#4A98F7">
-                  </li>
-                </ul>
+                <div class="title">
+                  <ul class="options">
+                    <li class="undo">
+                      <img src="Images/Undo.png" id="icon">
+                    </li>
+                    <li class="redo">
+                      <img src="Images/Redo.png" id="icon">
+                    </li>
+                  </ul>
+                </div>
+                <div class="title">
+                  <h4>Line Width</h4>
+                  <ul class="options">
+                    <li class="slide">
+                      <input type="range" id="size" min="1" max="30" value="5">
+                    </li>
+                  </ul>
+                </div>
+                <div class="title">
+                  <h4>Shapes</h4>
+                  <ul class="options">
+                    <li class="shape" id="free">                      
+                        <img src="Images/Draw.png" id="icon">                      
+                    </li>
+                    <li class="shape" id="line">                      
+                        <img src="Images/line.png" id="icon">                      
+                    </li>
+                    <li class="shape" id="rectangle">                   
+                        <img src="Images/rectangle.png" id="icon">                     
+                    </li>
+                    <li class="shape" id="circle">                     
+                        <img src="Images/circle.png" id="icon">                     
+                    </li>
+                  </ul>
+                </div>
+                <div class="title">
+                  <h4>Colors</h4>
+                  <ul class="options">
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option">
+                      <input type="color" id="color-picker" value="#4A98F7">
+                    </li>
+                  </ul>
+                </div>
                 <div>
                 <li class="clean">
                   <img src="Images/Delete.png" id="icon">
