--- a/imgConvert.html
+++ b/imgConvert.html
@@ -35,19 +35,22 @@
         <div id="paper"></div>
         <div class="poster">
             <h2>Convert Image Format</h2>
-        <div class="upload-img">
-          <input type="file" id="container" accept="image/*" onchange="container(event)">
-          <img id="output" width="400" height="400" />
+        
 
           <div class="upload-img">
             <input type="file" id="imageUpload" accept="image/*" onchange="displayImage(event)">
             <label class="button-28" for="imageUpload">Import file</label>
             <div id="imageContainer" style="margin-top: 20px;">
-                <img id="output" style="max-width: 400px; max-height: 400px;" />
+                <img id="output" style="max-width: 1000px; max-height: 3000px;" />
+          </div>
             </div>
-            <center>
-                <button class="button-87" type="button" id="imageUpload" onclick="convertToPng()">Convert to PNG</button>
-            </center>
+
+            <div class="upload-img">
+                <button class="button-87" type="button" id="convertToPng" onclick="convertTo('png')">Convert to PNG</button>
+                <button class="button-87" type="button" id="convertToJpg" onclick="convertTo('jpg')">Convert to JPG</button>
+                <button class="button-87" type="button" id="convertToJpeg" onclick="convertTo('jpeg')">Convert to JPEG</button>
+            </div>
+
             <br><br>
     <a id="downloadLink" style="display: none;">Download PNG</a>
     <br>
