--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <button onclick="location.href='pdftoimg.html'">
           <img class="iconz" src="Images\pdftoimg.png" >
             <h3>PDF to Image</h3>
-            <p class="showDes">Convert a PDF into an Images</p>
+            <p class="showDes">Convert a PDF into Images</p>
         </button>
       </div>
 
@@ -150,6 +150,15 @@
         </button>
       </div>
     </div>
+
+    <div class="squarebox ">
+      <button onclick="location.href='resize.html'">
+        <img class="iconz" src="Images/resize.png" >
+          <h3>Resize Image</h3>
+          <p class="showDes">Adjust the width and height of an Image</p>
+      </button>
+    </div>
+  </div>
 
 </body>
 
