--- a/imgConvert.html
+++ b/imgConvert.html
@@ -35,6 +35,9 @@
         <div id="paper"></div>
         <div class="poster">
             <h2>Convert Image Format</h2>
+            <div class="drop_area">
+                <h4>Drag & Drop your image here</h4>
+            </div>
         
 
           <div class="upload-img">
